tests/baselines/reference/sideEffectImports3(moduledetection=legacy,resolvesideeffectimports=true).errors.txt
index.ts(1,8): error TS2306: File 'not-a-module.ts' is not a module.


==== index.ts (1 errors) ====
    import "./not-a-module";
           ~~~~~~~~~~~~~~~~
!!! error TS2306: File 'not-a-module.ts' is not a module.
    
==== not-a-module.ts (0 errors) ====
    console.log("Hello, world!");
    